--- a/Tyden-02/03-Margin-a-padding/06-Priklad/style.css
+++ b/Tyden-02/03-Margin-a-padding/06-Priklad/style.css
@@ -1,7 +1,33 @@
+html {
+  box-sizing: border-box;
+}
+*.::before, ::after {
+  	box-sizing: inherit;
+}
+* {
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
   font-size: 18px;
   line-height: 1.5;
+  text-align: left;
 }
 
+.nadpis, .odstavec2 {
+  margin: 0;
+}
+
+.odstavec1 {
+  margin: 20px, 30px, 20px, 30px;
+}
+
+.box {
+  border: 5px solid black;
+  background-color: rgb(135, 219, 240);
+  width: 600px;
+  padding: 30px;
+  margin: 50px auto 0 auto;
+}
 /* -------------------------------- */
